# EUSRR

./: .dockerignore  .env.example  .gitignore  .gitignore.ldap  API_QUICKSTART.md  API_REFACTORING_TESTING.md  BASE_TEMPLATE_REFACTORING.md  BASE_TEMPLATE_REFACTORING_COMPLETE.md  BUDGET_SYSTEM.md  CACHING_SETUP.md  CHAT_LIST_BUGS_FIX.md  CHAT_LIST_RENDERING_ANALYSIS.md  CHAT_RENDERING_ANALYSIS.md  DOCKER_ORCHESTRATION.md  DOCUMENTS_MODAL_ANALYSIS.md  EDITING_ATTACHMENTS_TROUBLESHOOTING.md  EUSRR_API.postman_collection.json  EUSRR_Local.postman_environment.json  FEED_AJAX_REFACTORING.md  FORWARDED_MESSAGE_METADATA.md  IP_REGISTRATION_RESTRICTIONS.md  IP_RESTRICTIONS_README.md  JS_MODULES_REFACTORING_COMPLETE.md  MESSAGE_EDITING_ANALYSIS.md  MESSAGE_NEWLINES_FIX.md  MESSAGE_RENDERING_REFACTORING.md  MESSAGE_SELECTION_FORWARDING.md  MESSAGE_SENDING_REFACTORING.md  MESSENGER_QUICKSTART.md  NAME_VALIDATION.md  POLLS_IMPLEMENTATION.md  POLL_LOADING_ANALYSIS.md  PROCUREMENT_APPROVERS.md  PROCUREMENT_IMPLEMENTATION_PLAN.md  PROCUREMENT_TEST_COMPLETION_REPORT.md  README.de.md  README.es.md  README.md  README.ru.md  REFACTORING_SUMMARY.md  (+15 more)
backend/communications/: MESSENGER_IMPLEMENTATION_COMPLETE.md  MESSENGER_IMPROVEMENTS.md  MESSENGER_INTEGRATION_GUIDE.md  STANDALONE_SETUP.md  admin.py  api_views.py  api_views.py.backup  apps.py  comments_helpers.py  consumers.py  context_processors.py  forms.py  models.py  notification_signals.py  pyproject.toml  routing.py  rules.py  serialization.py  signals.py  tasks.py  urls.py  user_consumer.py  utils.py  views.py
backend/communications/api/: README.md  __init__.py  permissions.py  serializers.py  urls.py  viewsets.py
backend/communications/migrations/: 0001_initial.py  0002_chat_is_main_chat_unique_main_global_chat_and_more.py  0003_alter_chat_department_alter_chat_participants.py  0004_chatreadstate.py  0005_alter_chatreadstate_unique_together_alter_chat_type_and_more.py  0006_chat_avatar_chat_created_by_chat_description_and_more.py  0007_alter_chat_type.py  0008_chatusersettings.py  0009_message_deleted_at_message_deleted_by_and_more.py  0010_messageattachment.py  0011_chataccesspermission_crosschatmessage_and_more.py  0012_chatmembership_chatreadstate_is_typing_and_more.py  0013_messengerintegration_messengeraccount_and_more.py  0014_remove_messengermessage_sender_account_and_more.py  0015_chat_blocked_at_chat_blocked_by_chat_can_reply_and_more.py  0016_remove_message_reactions_messagereaction.py  0017_add_forward_fields.py  0018_add_forwarded_metadata.py  0019_add_polls.py  (+20 more)
backend/payroll_core/: README.md  __init__.py  calculator.py  domain.py  exceptions.py  pyproject.toml
docs/: README.md  (+1 more)
(+2016 files in other folders)
