[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portable-payroll-core"
version = "0.1.0"
description = "Deterministic project-independent payroll calculation core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
packages = ["payroll_core"]
package-dir = {payroll_core = "."}
